@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.18 2003/07/17 21:28:02 grant Exp $
+# $NetBSD: Makefile,v 1.19 2003/10/20 15:28:23 agc Exp $
 
 DISTNAME=	db-3.3.11
 PKGNAME=	db3-3.11.2
+PKGREVISION=	1
 WRKSRC=		${WRKDIR}/${DISTNAME}/build_unix
 CATEGORIES=	databases
 MASTER_SITES=	http://www.sleepycat.com/update/snapshot/
@@ -24,6 +25,7 @@ CONFIGURE_ARGS+=	--program-transform-name=s,db_,db3_,
 CONFIGURE_ARGS+=	--includedir=${PREFIX}/include/db3
 CONFIGURE_ARGS+=	--enable-cxx
 CONFIGURE_ARGS+=	--enable-shared
+CONFIGURE_ARGS+=	--enable-compat185
 
 post-install:
 	${CHOWN} -R ${BINOWN}:${BINGRP} ${PREFIX}/share/doc/db3
